--- a/tankBattle/tankBattle.vcxproj
+++ b/tankBattle/tankBattle.vcxproj
@@ -155,14 +155,14 @@
     <ClCompile Include="Myapp.cpp" />
     <ClCompile Include="tankBattle.cpp" />
     <ClCompile Include="terminal.cpp" />
-    <ClCompile Include="TermioApp.cpp" />
+    <ClCompile Include="termgui.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Myapp.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="terminal.h" />
-    <ClInclude Include="TermioApp.h" />
+    <ClInclude Include="termgui.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
