完成了: 在Drawable.cpp 添加实用的工具函数,让我们可以从文件中读取Drawable的具体形状. 需要完成: 1.完成键盘输入的初步编写. 2.完成对终端字体的调整.

--- a/tankBattle/tankBattle.vcxproj
+++ b/tankBattle/tankBattle.vcxproj
@@ -152,17 +152,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="drawable.cpp" />
     <ClCompile Include="Myapp.cpp" />
     <ClCompile Include="tankBattle.cpp" />
     <ClCompile Include="terminal.cpp" />
     <ClCompile Include="termgui.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="drawable.h" />
     <ClInclude Include="Myapp.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="terminal.h" />
     <ClInclude Include="termgui.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tank.draw" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
