--- a/tankBattle/tankBattle.vcxproj.filters
+++ b/tankBattle/tankBattle.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="termgui.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="drawable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="terminal.h">
@@ -44,5 +47,13 @@
     <ClInclude Include="termgui.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="drawable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tank.draw">
+      <Filter>源文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
