--- a/tankBattle/tankBattle.vcxproj.filters
+++ b/tankBattle/tankBattle.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="drawable.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="drawableobj.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="terminal.h">
@@ -48,6 +51,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="drawable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="drawableobj.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
