1.更改了坦克的外形; 2.修改了添加游戏贴图的机制 3.添加了一个实例的砖墙

--- a/tankBattle/tankBattle.vcxproj
+++ b/tankBattle/tankBattle.vcxproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="tank.draw" />
+    <None Include="wall.draw" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
