--- a/tankBattle/tankBattle.vcxproj
+++ b/tankBattle/tankBattle.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="tankBattle.cpp" />
     <ClCompile Include="terminal.cpp" />
     <ClCompile Include="termgui.cpp" />
+    <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drawable.h" />
@@ -167,8 +168,10 @@
     <ClInclude Include="resource1.h" />
     <ClInclude Include="terminal.h" />
     <ClInclude Include="termgui.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="bullet.draw" />
     <None Include="tank.draw" />
     <None Include="wall.draw" />
   </ItemGroup>
